Update templates and postman collection with new endpoints

--- a/fake-api/templates/imposters.ejs
+++ b/fake-api/templates/imposters.ejs
@@ -1,6 +1,8 @@
 {
     "imposters": [
         <% include node-contract.json %>,
-        <% include pod-contract.json %>
+        <% include metrics-contract.json %>,
+        <% include pod-contract.json %>,
+        <% include namespaces-contract.json %>
     ]
 }
